Added -Werror flag to treat warnings as errors

--- a/tasks.json
+++ b/tasks.json
@@ -14,7 +14,8 @@
 				"-Weffc++",
 				"-pedantic-errors",
 				"-Wextra",
-				"-Wsign-conversion"
+				"-Wsign-conversion",
+				"-Werror"
 				
 			],
 			"options": {
