--- a/tasks.json
+++ b/tasks.json
@@ -15,7 +15,8 @@
 				"-pedantic-errors",
 				"-Wextra",
 				"-Wsign-conversion",
-				"-Werror"
+				"-Werror",
+				"-std=c++17"
 				
 			],
 			"options": {
